feature: finaliza a aula "Iniciando o Pimple"

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,12 @@
 APP_PORT=
-DB_PORT=
+DB_EXTERNAL_PORT=
 PMA_PORT=
 
 DOCKER_CONTAINER_PREFIX=
 
+DB_PREFIX=
 DB_HOST=
-DB_INTERNAL_PORT=
+DB_PORT=
 DB_DATABASE=
 DB_USER=
 DB_PASSWORD=
