--- a/.env.ready
+++ b/.env.ready
@@ -1,12 +1,13 @@
-APP_PORT=5010
-DB_PORT=5020
-PMA_PORT=5030
+APP_PORT=6010
+DB_EXTERNAL_PORT=6020
+PMA_PORT=6030
 
-DOCKER_CONTAINER_PREFIX=pbi
+DOCKER_CONTAINER_PREFIX=project-manager
 
+DB_PREFIX=mysql
 DB_HOST=${DOCKER_CONTAINER_PREFIX}-mariadb
-DB_INTERNAL_PORT=3306
-DB_DATABASE=pbi
+DB_PORT=3306
+DB_DATABASE=manager
 DB_USER=root
 DB_PASSWORD=password
 DB_ROOT_PASSWORD=password
