--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
       "email": "vitorgpalves@gmail.com"
     }
   ],
-  "require": {},
+  "require": {
+    "pimple/pimple": "^3.2",
+    "vlucas/phpdotenv": "^3.4"
+  },
   "autoload": {
     "psr-4": {
       "Framework\\": "src",
