--- a/.env.ready
+++ b/.env.ready
@@ -2,13 +2,13 @@ APP_PORT=6010
 DB_EXTERNAL_PORT=6020
 PMA_PORT=6030
 
-DOCKER_CONTAINER_PREFIX=project-manager
+DOCKER_CONTAINER_PREFIX=project
 
 DB_PREFIX=mysql
-DB_HOST=${DOCKER_CONTAINER_PREFIX}-mariadb
+DB_HOST=${DOCKER_CONTAINER_PREFIX}-mysql
 DB_PORT=3306
-DB_DATABASE=manager
-DB_USER=root
+DB_DATABASE=project
+DB_USER=project
 DB_PASSWORD=password
 DB_ROOT_PASSWORD=password
 DB_ALLOW_EMPTY_PASSWORD=no
