--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
   ],
   "require": {
     "pimple/pimple": "^3.2",
-    "vlucas/phpdotenv": "^3.4"
+    "vlucas/phpdotenv": "^3.4",
+    "symfony/http-foundation": "^4.3"
   },
   "autoload": {
     "psr-4": {
