feature: finaliza a aula "Modularidade na prática parte 1"

--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
   },
   "autoload": {
     "psr-4": {
-      "Framework\\": "src",
-      "App\\": "app"
+      "Framework\\": "src"
     }
   }
 }
